--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
                         <version>2.19.1</version>
                         <configuration>
                             <suiteXmlFiles>
-                                <suiteXmlFile>testngMasterAdmin.xml</suiteXmlFile>
+                                <suiteXmlFile>Organisation.xml</suiteXmlFile>
                             </suiteXmlFiles>
                         </configuration>
                     </plugin>
